<resources>
    <string name="app_name">My Ticket</string>
    <string name="title_activity_maps">mapsTitle</string>
    <string name="open_nav">open</string>
    <string name="close_nav">close</string>


    <string name="username">Username</string>
    <string name="nameofuser">Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="phone">Phone</string>

    <string name="haveaccount">Already have an account ?</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="waiting">please , wait ...</string>
    <string name="change_photo">Change Photo</string>
    <string name="register">Register</string>
    <string name="screen">cinema pic.</string>
    <string name="note_choose_chairs">* choose your seat according to your ticket</string>
    <string name="choose_next">Choose Next</string>
    <string name="cinema_location">Cinema Location</string>
    <string name="pay_sr">Pay 60 SR</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="verified">Verified</string>
    <string name="send_reset_link">SEND RESET LINK</string>
    <string name="cinema">CINEMA</string>
    <string name="stadium">STADIUM</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_all">See All</string>
    <string name="near_by_cinemas">Near By Cinemas</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="change_password">Change Password</string>
    <string name="movies_list">Movies List</string>
    <string name="cinema_map">Cinema Map</string>
    <string name="my_tickets">My Tickets</string>
    <string name="amr_eldsoky">amr eldsoky</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cinema_list">Cinema List</string>
    <string name="forget_password">Forgot Your Password ?</string>
    <string name="create_new_account">Create new Account ?</string>
    <string name="login">Login</string>
    <string name="reserve">Reserve</string>
    <string name="category">Category</string>
    <string name="rating">Rating</string>
    <string name="make_a_review">Make a Review !</string>
    <string name="total">Total:</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="next">next</string>
    <string name="reset_your_password">RESET YOUR PASSWORD</string>
    <string name="save_new_password">Save new password</string>
    <string name="view_all_results">View All Results</string>
    <string name="filter_by">Filter By: </string>
    <string name="movies">Movies</string>

    <string name="all_results">All Results</string>
    <string name="reviews">Reviews</string>

    <string name="location">Location</string>
    <string name="thanks_for_your_feedback">Thanks For Your Feedback !</string>
    <string name="submit">Submit</string>
    <string name="cinemas">Cinemas</string>
    <string name="choose_your_seat">Choose Your Seat</string>
    <string name="confirm_payment">Confirm Your Payment</string>
    <string name="edit_account">Edit Account</string>
    <string name="please_fill_all_fields">Please Fill All Fields</string>
    <string name="email_not_valid">Email Not Valid</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="failed_to_update">Failed To Update</string>
    <string name="select_your_gate">Select Your Gate</string>
    <string name="make_sure_passwords_match">Please Make Sure Passwords Match</string>
    <string name="reservation">Reservation</string>
    <string name="search_results">Search Results</string>
    <string name="seat_number">Seat Number</string>
    <string name="search">Search</string>
    <string name="backtogatee">Back to gate</string>
    <string name="logout">logout</string>
    <string name="upcomming">Upcoming</string>
    <string name="past">Past</string>
    <string name="more">More</string>
    <string name="alerts">Alerts</string>
    <string name="near_by">Near By</string>

    <string name="enter_seat">Enter Seat Count</string>

    <string name="book">Book</string>
    <string name="location_on_map">Location On Map</string>
    <string name="tickets_categories">Tickets Categories</string>

    <string name="details">Details</string>
    <string name="tickets_options">Tickets Options</string>
    <string name="tickets_type">Tickets Type</string>
    <string name="enter_chairs_numbers">Enter Chairs Numbers</string>
    <string name="confirm_tickets">Confirm Tickets</string>
    <string name="title_activity_stad_home_nav">stad_home_nav</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="stadium_list">Stadium List</string>
    <string name="matches_list">Matches List</string>
    <string name="notification_activated">Notification Activated</string>
    <string name="title_activity_home_stad_bottom_nav">HomeStadBottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="match_details">Match Details</string>
    <string name="your_seats">YOUR SEATS:</string>
    <string name="individual_ticket">Individual Ticket:</string>
    <string name="subtotal">SUBTOTAL: </string>
    <string name="confirm_seats">Confirm Seats</string>
    <string name="select_chairs">Select Chairs</string>
    <string name="my_ticket">My Ticket</string>

    <string name="dialog_title">You are Offline</string>
    <string name="dialog_message">Oops! There is no Internet connection, Please check your connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="select_ticket_type">Select Ticket Type</string>
    <string name="choose_a_type">Please Choose a Type</string>
    <string name="select_block_type">Select Block Type</string>
    <string name="change_selection">Change Selection</string>
    <string name="error">Error</string>
    <string name="stadiums">Stadiums</string>
    <string name="settings">Settings</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="next_week">Next Week</string>
    <string name="search_matches">Search Matches</string>
    <string name="search_stadiums">Search Stadiums</string>
    <string name="check_connection">Check your internet connection</string>
    <string name="description">Description</string>
    <string name="seats">Seats: </string>
    <string name="upcoming">UPCOMING</string>
    <string name="class_type">Class:</string>
    <string name="enter_old_password">Enter Old Password:</string>
    <string name="new_password">New Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="old_password">Old Password</string>
    <string name="new_password_">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="no_matches_are_being_played_now">No matches are being played now</string>
    <string name="limit_warning">You have reached your reservation limit for this match</string>
    <string name="your_limit_is">Your tickets limit is</string>
    <string name="tickets">tickets.</string>
    <string name="enter_number_of_tickets">Enter number of tickets</string>
    <string name="download_ticket">Download Ticket</string>
    <string name="block">Block:</string>
    <string name="permission">Please give permission to the app</string>


    <string name="showDetails">Show stored card</string>
    <string name="no_tickets_available">No Tickets Available</string>
    <string name="no_search_results">No Search Results</string>
    <string name="no_matches_available">No Matches Available</string>


    <string name="pending">Pending</string>
    <string name="re_pay">Re-pay</string>
</resources>
