<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/green_gradient"
    tools:context=".View.Activity.Login">

    <include
        android:id="@+id/toolbar_login"
        layout="@layout/stad_top_toolbar"/>

    <!--<ImageView-->
    <!--android:id="@+id/main_logo"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--android:layout_marginTop="24dp"-->
    <!--android:src="@drawable/my_ticket_white_logo"/>-->
    <!--<TextView-->
    <!--android:id="@+id/login_title"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:layout_constraintStart_toStartOf="@id/main_logo"-->
    <!--app:layout_constraintEnd_toEndOf="@id/main_logo"-->
    <!--app:layout_constraintTop_toBottomOf="@id/main_logo"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:text="LOGIN"-->
    <!--android:textSize="18dp"-->
    <!--android:textAlignment="center"-->
    <!--android:textColor="#fff"-->
    <!--/>-->

    <EditText

        android:hint="@string/username"
        android:id="@+id/username_login"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_login"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/green_rect_bk"
        android:drawableTint="@color/green_tab"
        android:textColor="@color/stad_grey_text"
        android:drawablePadding="8dp"
        android:textColorHint="@color/grey_star"
        android:drawableStart="@drawable/ic_person_black_24dp"
        >

    </EditText>

    <EditText
        android:hint="@string/password"
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_login"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:background="@drawable/green_rect_bk"
        android:drawableTint="@color/green_tab"
        android:textColor="@color/stad_grey_text"
        android:drawablePadding="8dp"
        android:textColorHint="@color/grey_star"
        />


    <FrameLayout
        android:id="@+id/frame_login"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ProgressBar
            android:id="@+id/progressBar_login"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:elevation="4dp"
            android:visibility="gone"
            android:indeterminateTint="@color/white"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rect_bk"
            android:backgroundTint="@color/red"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />
    </FrameLayout>

    <TextView

        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/forget_password"
        android:textColor="@color/stad_grey_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_login" />
    <!--android:layout_marginEnd="16dp"-->
    <!--android:text="@string/forget_password"-->
    <!--app:layout_constraintStart_toStartOf="parent"/>-->

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_new_account"
        android:textColor="@color/stad_grey_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_login" />





</android.support.constraint.ConstraintLayout>
